@startuml
abstract class match_parser {
	# <i>final</i> parse_token()
	# <i>final</i> parse_eoi()
	# <i>virtual</i> is_match()
}

class type_match_parser {
	# <i>final</i> is_match()
}

class value_match_parser {
	# <i>final</i> is_match()
}

match_parser <|-- type_match_parser
match_parser <|-- value_match_parser
@enduml
